# elf

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  elf.c  ldkit.c  server.sh
include/: config.h  syscall.h
src/: elf.c  elf.h  ldkit.c
